--- a/src/SimonGUI.fxml
+++ b/src/SimonGUI.fxml
@@ -17,17 +17,17 @@
          </font>
       </Label>
       <Circle layoutX="300.0" layoutY="261.0" radius="184.0" stroke="BLACK" strokeType="INSIDE" />
-      <Arc fx:id="yellowButton" fill="#bfa813" layoutX="299.0" layoutY="260.0" length="60.0" radiusX="180.0" radiusY="180.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
-      <Arc fx:id="purpleButton" fill="#61109a" layoutX="300.0" layoutY="260.0" length="60.0" radiusX="180.0" radiusY="180.0" startAngle="-180.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
-      <Arc fx:id="redButton" fill="#8a1111" layoutX="300.0" layoutY="261.0" length="60.0" radiusX="180.0" radiusY="180.0" startAngle="60.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
-      <Arc fx:id="greenButton" fill="#0e7c10" layoutX="299.0" layoutY="260.0" length="60.0" radiusX="180.0" radiusY="180.0" startAngle="-60.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
-      <Arc fx:id="blueButton" fill="#0663a1" layoutX="300.0" layoutY="260.0" length="60.0" radiusX="180.0" radiusY="180.0" startAngle="-120.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
-      <Arc fx:id="orangeButton" fill="#a4660e" layoutX="300.0" layoutY="260.0" length="60.0" radiusX="180.0" radiusY="180.0" startAngle="120.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
+      <Arc fx:id="yellowButton" fill="#bfa813" layoutX="299.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
+      <Arc fx:id="purpleButton" fill="#61109a" layoutX="300.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="-180.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
+      <Arc fx:id="redButton" fill="#8a1111" layoutX="300.0" layoutY="261.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="60.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
+      <Arc fx:id="greenButton" fill="#0e7c10" layoutX="299.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="-60.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
+      <Arc fx:id="blueButton" fill="#0663a1" layoutX="300.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="-120.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
+      <Arc fx:id="orangeButton" fill="#a4660e" layoutX="300.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="120.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
       <Circle layoutX="300.0" layoutY="261.0" radius="83.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fill="BEIGE" layoutX="300.0" layoutY="261.0" radius="78.0" stroke="BLACK" strokeType="INSIDE" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d0000" height="45.0" layoutX="275.0" layoutY="235.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
       <Label layoutX="283.0" layoutY="280.0" text="Round" />
-      <Button fx:id="startButton" layoutX="277.0" layoutY="42.0" mnemonicParsing="false" text="Start!">
+      <Button fx:id="startButton" layoutX="356.0" layoutY="43.0" mnemonicParsing="false" onAction="#buttonAction" text="Start!">
          <font>
             <Font size="12.0" />
          </font>
@@ -37,5 +37,10 @@
             <Font size="30.0" />
          </font>
       </Label>
+      <Button fx:id="instructionsButton" layoutX="185.0" layoutY="43.0" mnemonicParsing="false" onAction="#buttonAction" text="Instructions">
+         <font>
+            <Font size="12.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
