--- a/src/SimonGUI.fxml
+++ b/src/SimonGUI.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
- 
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
@@ -8,22 +8,21 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="600.0" style="-fx-background-color: beige;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SimonController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom right, #fdfcfb, #e2d1c3);" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SimonController">
    <children>
       <Label alignment="CENTER" layoutX="199.0" prefHeight="42.0" prefWidth="201.0" text="Java Simon">
          <font>
             <Font name="Futura Bold" size="25.0" />
          </font>
       </Label>
-      <Circle layoutX="300.0" layoutY="261.0" radius="184.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle layoutX="300.0" layoutY="261.0" radius="182.0" stroke="BLACK" strokeType="INSIDE" />
       <Arc fx:id="yellowButton" fill="#bfa813" layoutX="299.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
       <Arc fx:id="purpleButton" fill="#61109a" layoutX="300.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="-180.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
       <Arc fx:id="redButton" fill="#8a1111" layoutX="300.0" layoutY="261.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="60.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
       <Arc fx:id="greenButton" fill="#0e7c10" layoutX="299.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="-60.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
       <Arc fx:id="blueButton" fill="#0663a1" layoutX="300.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="-120.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
       <Arc fx:id="orangeButton" fill="#a4660e" layoutX="300.0" layoutY="260.0" length="60.0" onMouseClicked="#userAction" radiusX="180.0" radiusY="180.0" startAngle="120.0" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
-      <Circle layoutX="300.0" layoutY="261.0" radius="83.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle layoutX="300.0" layoutY="261.0" radius="80.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fill="BEIGE" layoutX="300.0" layoutY="261.0" radius="78.0" stroke="BLACK" strokeType="INSIDE" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d0000" height="45.0" layoutX="275.0" layoutY="235.0" stroke="BLACK" strokeType="INSIDE" width="50.0" />
       <Label layoutX="283.0" layoutY="280.0" text="Round" />
